# climdatapy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
doc/: HIMSST.md  JRA3Q.md  MGDSST.md  NCEP1.md  NCEP2.md  OSTIA.md
sample/: download_JRA3Q.py  update_JRA3Q.py
src/climdatapy/: __init__.py  cli.py  manager.py
src/climdatapy/data/: __init__.py
src/climdatapy/data/JRA3Q/: dataset.py  dl.py
src/climdatapy/data/MGDSST/: dataset.py  dl.py
src/climdatapy/data/NCEP12/: dataset.py  dl.py
src/climdatapy/data/OSTIA/: __init__.py  dataset.py  dl.py
src/climdatapy/util/: __init__.py  dataset.py  download.py  log.py  readrc.py
tmp/JRA3Q/: dl_test.py
