[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climdatapy"
version = "0.1.0"
description = "Downloader for meteorological and ocean datasets"
authors = [{name="So Tomita"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]