[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climdatapy"
version = "v0.1.1"
description = "Downloader for meteorological and ocean datasets"
authors = [{name="So Tomita"}]
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
climdata = "climdatapy.cli:main"